[tool.poetry]
name = "natsjwt"
version = "0.1.0"
description = "NATS JWT (nkeys)"
authors = ["Rentouch"]
license = "MIT"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
nkeys = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
